--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Rawan96/task-manager-app#readme",
   "dependencies": {
     "mongodb": "^3.6.4",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "validator": "^13.5.2"
   }
 }
