--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Rawan96/task-manager-app#readme",
   "dependencies": {
+    "env2": "^2.2.2",
+    "express": "^4.17.1",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.15",
     "validator": "^13.5.2"
