Send welcome and cancelation emails to the user

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Rawan96/task-manager-app#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "bcrypt": "^5.0.0",
     "env2": "^2.2.2",
     "express": "^4.17.1",
